--- a/hyperparameter_tuning.ipynb
+++ b/hyperparameter_tuning.ipynb
@@ -31,17 +31,20 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Workspace name: quick-starts-ws-139399\n",
+            "Performing interactive authentication. Please follow the instructions on the terminal.\n",
+            "To sign in, use a web browser to open the page https://microsoft.com/devicelogin and enter the code AVNXZ6TNT to authenticate.\n",
+            "You have logged in. Now let us find all the subscriptions to which you have access...\n",
+            "Workspace name: quick-starts-ws-139432\n",
             "Azure region: southcentralus\n",
-            "Subscription id: b968fb36-f06a-4c76-a15f-afab68ae7667\n",
-            "Resource group: aml-quickstarts-139399\n"
+            "Subscription id: a0a76bad-11a1-4a2d-9887-97a29122c8ed\n",
+            "Resource group: aml-quickstarts-139432\n"
           ]
         }
       ],
-      "execution_count": 20,
+      "execution_count": 1,
       "metadata": {
         "gather": {
-          "logged": 1614115698043
+          "logged": 1614187852424
         }
       }
     },
@@ -68,10 +71,10 @@
         "ds1=ds.to_pandas_dataframe()"
       ],
       "outputs": [],
-      "execution_count": 50,
+      "execution_count": 2,
       "metadata": {
         "gather": {
-          "logged": 1614116934879
+          "logged": 1614187859553
         },
         "jupyter": {
           "outputs_hidden": false,
@@ -81,6 +84,59 @@
           "transient": {
             "deleting": false
           }
+        }
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#\r\n",
+        "\r\n",
+        "    # Dict for cleaning data\r\n",
+        "    schools = {\"GP\":1, \"MS\":2}\r\n",
+        "    sexs = {\"F\":1, \"M\":2}\r\n",
+        "    famsizes = {\"LT3\":1, \"GT3\":2}\r\n",
+        "    Pstatuss = {\"A\":1, \"T\":2}\r\n",
+        "    Mjobs = {\"at_home\":1, \"services\":2, \"health\":3, \"teacher\":4, \"other\":5}\r\n",
+        "    Fjobs = {\"at_home\":1, \"services\":2, \"health\":3, \"teacher\":4, \"other\":5}\r\n",
+        "     = {\"at_home\":1, \"services\":2, \"health\":3, \"teacher\":4, \"other\":5}\r\n",
+        "\r\n",
+        "\r\n",
+        "\r\n",
+        "    # Clean and one hot encode data\r\n",
+        " #   x_df = data.to_pandas_dataframe().dropna()\r\n",
+        " #   jobs = pd.get_dummies(x_df.job, prefix=\"job\")\r\n",
+        " #   x_df.drop(\"job\", inplace=True, axis=1)\r\n",
+        " #   x_df = x_df.join(jobs)\r\n",
+        " #   x_df[\"marital\"] = x_df.marital.apply(lambda s: 1 if s == \"married\" else 0)\r\n",
+        " #   x_df[\"default\"] = x_df.default.apply(lambda s: 1 if s == \"yes\" else 0)\r\n",
+        " #   x_df[\"housing\"] = x_df.housing.apply(lambda s: 1 if s == \"yes\" else 0)\r\n",
+        " #   x_df[\"loan\"] = x_df.loan.apply(lambda s: 1 if s == \"yes\" else 0)\r\n",
+        " #   contact = pd.get_dummies(x_df.contact, prefix=\"contact\")\r\n",
+        " #   x_df.drop(\"contact\", inplace=True, axis=1)\r\n",
+        " #   x_df = x_df.join(contact)\r\n",
+        " #   education = pd.get_dummies(x_df.education, prefix=\"education\")\r\n",
+        " #   x_df.drop(\"education\", inplace=True, axis=1)\r\n",
+        " #   x_df = x_df.join(education)\r\n",
+        " #   x_df[\"month\"] = x_df.month.map(months)\r\n",
+        " #   x_df[\"day_of_week\"] = x_df.day_of_week.map(weekdays)\r\n",
+        " #   x_df[\"poutcome\"] = x_df.poutcome.apply(lambda s: 1 if s == \"success\" else 0)"
+      ],
+      "outputs": [],
+      "execution_count": 3,
+      "metadata": {
+        "collapsed": true,
+        "jupyter": {
+          "source_hidden": false,
+          "outputs_hidden": false
+        },
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        },
+        "gather": {
+          "logged": 1614187861625
         }
       }
     },
