--- a/hyperparameter_tuning.ipynb
+++ b/hyperparameter_tuning.ipynb
@@ -31,21 +31,17 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Performing interactive authentication. Please follow the instructions on the terminal.\n",
-            "To sign in, use a web browser to open the page https://microsoft.com/devicelogin and enter the code AGM48QF45 to authenticate.\n",
-            "You have logged in. Now let us find all the subscriptions to which you have access...\n",
-            "Interactive authentication successfully completed.\n",
-            "Workspace name: quick-starts-ws-139481\n",
+            "Workspace name: quick-starts-ws-139485\n",
             "Azure region: southcentralus\n",
-            "Subscription id: d7f39349-a66b-446e-aba6-0053c2cf1c11\n",
-            "Resource group: aml-quickstarts-139481\n"
+            "Subscription id: 9a7511b8-150f-4a58-8528-3e7d50216c31\n",
+            "Resource group: aml-quickstarts-139485\n"
           ]
         }
       ],
       "execution_count": 1,
       "metadata": {
         "gather": {
-          "logged": 1614291969747
+          "logged": 1614300685982
         }
       }
     },
@@ -75,7 +71,7 @@
       "execution_count": 2,
       "metadata": {
         "gather": {
-          "logged": 1614292253537
+          "logged": 1614300713354
         },
         "jupyter": {
           "outputs_hidden": false,
@@ -104,26 +100,27 @@
         "from azureml.data.dataset_factory import TabularDatasetFactory\r\n",
         "from azureml.core import Dataset\r\n",
         "from sklearn.model_selection import train_test_split\r\n",
+        "from sklearn.metrics import accuracy_score\r\n",
         "#from sklearn.ensemble import RandomForestClassifier\r\n",
         "#from sklearn.datasets import make_classification\r\n",
         "#from sklearn.datasets import load_iris\r\n",
         "#from sklearn.model_selection import cross_val_score\r\n",
         "from sklearn.tree import DecisionTreeClassifier\r\n",
+        "from sklearn.multioutput import MultiOutputClassifier\r\n",
         "ds = Dataset.get_by_name(ws,'alcohol')\r\n",
         "\r\n",
         "\r\n",
         "\r\n",
         "def clean_data(dat): \r\n",
         "    xd=dat.to_pandas_dataframe()\r\n",
-        "    xd=xd.apply(pd.to_numeric, errors='coerce')\r\n",
-        "    xd=xd.dropna()\r\n",
-        "    xd=xd.reset_index(drop=True)\r\n",
         "    schools = {\"GP\":1, \"MS\":2}\r\n",
         "    sexs = {\"F\":1, \"M\":2}\r\n",
+        "    addresss = {\"U\":1, \"R\":2}\r\n",
         "    famsizes = {\"LT3\":1, \"GT3\":2}\r\n",
         "    Pstatuss = {\"A\":1, \"T\":2}\r\n",
         "    Mjobs = {\"at_home\":1, \"services\":2, \"health\":3, \"teacher\":4, \"other\":5}\r\n",
         "    Fjobs = {\"at_home\":1, \"services\":2, \"health\":3, \"teacher\":4, \"other\":5}\r\n",
+        "    guardians = {\"mother\":1, \"father\":2, \"other\":3}\r\n",
         "    reasons = {\"course\":1, \"home\":2, \"reputation\":3, \"other\":4}\r\n",
         "\r\n",
         "\r\n",
@@ -144,13 +141,14 @@
         " #   x_df.drop(\"education\", inplace=True, axis=1)\r\n",
         " #   x_df = x_df.join(education)\r\n",
         "    xd[\"school\"] = xd.school.map(schools)\r\n",
-        "  \r\n",
+        "    xd[\"address\"] = xd.address.map(addresss)\r\n",
         "    xd[\"famsize\"] = xd.famsize.map(famsizes)\r\n",
         "    xd[\"sex\"] = xd.sex.map(sexs)\r\n",
         "    xd[\"Pstatus\"] = xd.Pstatus.map(Pstatuss)\r\n",
         "    xd[\"Mjob\"] = xd.Mjob.map(Mjobs)\r\n",
         "    xd[\"Fjob\"] = xd.Fjob.map(Fjobs)\r\n",
         "    xd[\"reason\"] = xd.reason.map(reasons)\r\n",
+        "    xd[\"guardian\"] = xd.guardian.map(guardians)\r\n",
         " #   x_df[\"day_of_week\"] = x_df.day_of_week.map(weekdays)\r\n",
         "    xd[\"schoolsup\"] = xd.schoolsup.apply(lambda s: 1 if s == \"yes\" else 0)\r\n",
         "    xd[\"famsup\"] = xd.famsup.apply(lambda s: 1 if s == \"yes\" else 0)\r\n",
@@ -160,15 +158,18 @@
         "    xd[\"higher\"] = xd.higher.apply(lambda s: 1 if s == \"yes\" else 0)\r\n",
         "    xd[\"internet\"] = xd.internet.apply(lambda s: 1 if s == \"yes\" else 0)\r\n",
         "    xd[\"romantic\"] = xd.romantic.apply(lambda s: 1 if s == \"yes\" else 0)\r\n",
+        "    xd=xd.apply(pd.to_numeric, errors='coerce')\r\n",
+        "    xd=xd.dropna()\r\n",
+        "    xd=xd.reset_index(drop=True)\r\n",
         "    return xd\r\n",
         "\r\n",
         "\r\n",
         "x = clean_data(ds)\r\n",
-        "#y= x.drop(\"Walc\", inplace=False, axis=1)\r\n",
+        "y= x.pop(\"Walc\")\r\n",
         "\r\n",
         "\r\n",
         "x_train, x_test = train_test_split(x, test_size=0.2,train_size=0.8,random_state=30)\r\n",
-        "#y_train, y_test = train_test_split(y, test_size=0.2,train_size=0.8)\r\n",
+        "y_train, y_test = train_test_split(y, test_size=0.2,train_size=0.8)\r\n",
         "\r\n",
         "#    parser = argparse.ArgumentParser()\r\n",
         "#    parser.add_argument('--max_leaf_nodes', type=int, default=10, help=\"Inverse of regularization strength. Smaller values cause stronger regularization\")\r\n",
@@ -182,60 +183,26 @@
         "\r\n",
         "    #---this-one--model = RandomForestClassifier(n_estimators = args.n_estimators, min_samples_split = args.min_samples_split)\r\n",
         "\r\n",
-        "model = DecisionTreeClassifier(min_samples_split = 2, max_leaf_nodes = 10).fit(x_train,y_train)\r\n",
+        "model = DecisionTreeClassifier(min_samples_split = 2, max_leaf_nodes = 10)\r\n",
+        "model.fit(x_train,y_train)\r\n",
+        "#classifier = MultiOutputClassifier(model, n_jobs=-1)\r\n",
+        "#classifier.fit(x_train,y_train)\r\n",
         "  #model = RandomForestClassifier(n_estimators = args.n_estimators)\r\n",
-        "\r\n",
-        "accuracy = model.score(x_test, y_test)\r\n",
+        "y_pred = model.predict(x_test)\r\n",
+        "accuracy = accuracy_score(y_pred, y_test)\r\n",
         "run.log(\"Accuracy\", np.float(accuracy))\r\n",
         "os.makedirs('outputs',exist_ok=True)\r\n",
         "joblib.dump(model, 'outputs/model.joblib')\r\n",
         "\r\n",
+        "\r\n",
         "\r\n"
-      ],
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "ValueError",
-          "evalue": "With n_samples=0, test_size=0.2 and train_size=0.8, the resulting train set will be empty. Adjust any of the aforementioned parameters.",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-36-6263a9ffeef3>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     75\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     76\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 77\u001b[0;31m \u001b[0mx_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mx_test\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtrain_test_split\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtest_size\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0.2\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mtrain_size\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0.8\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mrandom_state\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m30\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     78\u001b[0m \u001b[0;31m#y_train, y_test = train_test_split(y, test_size=0.2,train_size=0.8)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     79\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/anaconda/envs/azureml_py36/lib/python3.6/site-packages/sklearn/model_selection/_split.py\u001b[0m in \u001b[0;36mtrain_test_split\u001b[0;34m(*arrays, **options)\u001b[0m\n\u001b[1;32m   2120\u001b[0m     \u001b[0mn_samples\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_num_samples\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0marrays\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2121\u001b[0m     n_train, n_test = _validate_shuffle_split(n_samples, test_size, train_size,\n\u001b[0;32m-> 2122\u001b[0;31m                                               default_test_size=0.25)\n\u001b[0m\u001b[1;32m   2123\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2124\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mshuffle\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mFalse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/anaconda/envs/azureml_py36/lib/python3.6/site-packages/sklearn/model_selection/_split.py\u001b[0m in \u001b[0;36m_validate_shuffle_split\u001b[0;34m(n_samples, test_size, train_size, default_test_size)\u001b[0m\n\u001b[1;32m   1803\u001b[0m             \u001b[0;34m'resulting train set will be empty. Adjust any of the '\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1804\u001b[0m             'aforementioned parameters.'.format(n_samples, test_size,\n\u001b[0;32m-> 1805\u001b[0;31m                                                 train_size)\n\u001b[0m\u001b[1;32m   1806\u001b[0m         )\n\u001b[1;32m   1807\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mValueError\u001b[0m: With n_samples=0, test_size=0.2 and train_size=0.8, the resulting train set will be empty. Adjust any of the aforementioned parameters."
-          ]
-        }
-      ],
-      "execution_count": 36,
-      "metadata": {
-        "collapsed": true,
-        "jupyter": {
-          "source_hidden": false,
-          "outputs_hidden": false
-        },
-        "nteract": {
-          "transient": {
-            "deleting": false
-          }
-        },
-        "gather": {
-          "logged": 1614206960106
-        }
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "x.head()"
       ],
       "outputs": [
         {
           "output_type": "execute_result",
           "execution_count": 32,
           "data": {
-            "text/plain": "   school  sex  age address  famsize  Pstatus  Medu  Fedu  Mjob  Fjob  ...  \\\n0       1    1   18       U      2.0        1     4     4     1     4  ...   \n1       1    1   17       U      2.0        2     1     1     1     5  ...   \n2       1    1   15       U      NaN        2     1     1     1     5  ...   \n3       1    1   15       U      2.0        2     4     2     3     2  ...   \n4       1    1   16       U      2.0        2     3     3     5     5  ...   \n\n   famrel freetime  goout  Dalc  Walc  health  absences  G1  G2  G3  \n0       4        3      4     1     1       3         6   5   6   6  \n1       5        3      3     1     1       3         4   5   5   6  \n2       4        3      2     2     3       3        10   7   8  10  \n3       3        2      2     1     1       5         2  15  14  15  \n4       4        3      2     1     2       5         4   6  10  10  \n\n[5 rows x 33 columns]",
-            "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>school</th>\n      <th>sex</th>\n      <th>age</th>\n      <th>address</th>\n      <th>famsize</th>\n      <th>Pstatus</th>\n      <th>Medu</th>\n      <th>Fedu</th>\n      <th>Mjob</th>\n      <th>Fjob</th>\n      <th>...</th>\n      <th>famrel</th>\n      <th>freetime</th>\n      <th>goout</th>\n      <th>Dalc</th>\n      <th>Walc</th>\n      <th>health</th>\n      <th>absences</th>\n      <th>G1</th>\n      <th>G2</th>\n      <th>G3</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>1</td>\n      <td>1</td>\n      <td>18</td>\n      <td>U</td>\n      <td>2.0</td>\n      <td>1</td>\n      <td>4</td>\n      <td>4</td>\n      <td>1</td>\n      <td>4</td>\n      <td>...</td>\n      <td>4</td>\n      <td>3</td>\n      <td>4</td>\n      <td>1</td>\n      <td>1</td>\n      <td>3</td>\n      <td>6</td>\n      <td>5</td>\n      <td>6</td>\n      <td>6</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>1</td>\n      <td>1</td>\n      <td>17</td>\n      <td>U</td>\n      <td>2.0</td>\n      <td>2</td>\n      <td>1</td>\n      <td>1</td>\n      <td>1</td>\n      <td>5</td>\n      <td>...</td>\n      <td>5</td>\n      <td>3</td>\n      <td>3</td>\n      <td>1</td>\n      <td>1</td>\n      <td>3</td>\n      <td>4</td>\n      <td>5</td>\n      <td>5</td>\n      <td>6</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>1</td>\n      <td>1</td>\n      <td>15</td>\n      <td>U</td>\n      <td>NaN</td>\n      <td>2</td>\n      <td>1</td>\n      <td>1</td>\n      <td>1</td>\n      <td>5</td>\n      <td>...</td>\n      <td>4</td>\n      <td>3</td>\n      <td>2</td>\n      <td>2</td>\n      <td>3</td>\n      <td>3</td>\n      <td>10</td>\n      <td>7</td>\n      <td>8</td>\n      <td>10</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>1</td>\n      <td>1</td>\n      <td>15</td>\n      <td>U</td>\n      <td>2.0</td>\n      <td>2</td>\n      <td>4</td>\n      <td>2</td>\n      <td>3</td>\n      <td>2</td>\n      <td>...</td>\n      <td>3</td>\n      <td>2</td>\n      <td>2</td>\n      <td>1</td>\n      <td>1</td>\n      <td>5</td>\n      <td>2</td>\n      <td>15</td>\n      <td>14</td>\n      <td>15</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>1</td>\n      <td>1</td>\n      <td>16</td>\n      <td>U</td>\n      <td>2.0</td>\n      <td>2</td>\n      <td>3</td>\n      <td>3</td>\n      <td>5</td>\n      <td>5</td>\n      <td>...</td>\n      <td>4</td>\n      <td>3</td>\n      <td>2</td>\n      <td>1</td>\n      <td>2</td>\n      <td>5</td>\n      <td>4</td>\n      <td>6</td>\n      <td>10</td>\n      <td>10</td>\n    </tr>\n  </tbody>\n</table>\n<p>5 rows × 33 columns</p>\n</div>"
+            "text/plain": "['outputs/model.joblib']"
           },
           "metadata": {}
         }
@@ -253,7 +220,39 @@
           }
         },
         "gather": {
-          "logged": 1614296573148
+          "logged": 1614303715238
+        }
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x.head()\r\n",
+        "print(accuracy)"
+      ],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0.2807017543859649\n"
+          ]
+        }
+      ],
+      "execution_count": 33,
+      "metadata": {
+        "collapsed": true,
+        "jupyter": {
+          "source_hidden": false,
+          "outputs_hidden": false
+        },
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        },
+        "gather": {
+          "logged": 1614303717871
         }
       }
     },
