--- a/automl.ipynb
+++ b/automl.ipynb
@@ -157,12 +157,25 @@
       "cell_type": "markdown",
       "source": [
         "## Run Details\n",
+        "Here  are  some examples of other models tried by  the experiment:\n",
         "\n",
-        "OPTIONAL: Write about the different models trained and their performance. Why do you think some models did better than others?\n",
+        "Model: MaxAbsScaler   Acuracy: 0.4\n",
+        "\n",
+        "Model:: StandardScalerWraper Acuracy: 0.28\n",
+        "\n",
+        "Model:: ExtrmeRandomTrees: 0.28\n",
+        "\n",
+        "BBut aas eexpeectteed, the  VVttiing  EEnnsemmblle  Model takes the best moddels and  furthermore  it combines them. That is why no other methods are as effective.\n",
         "\n",
         "TODO: In the cell below, use the `RunDetails` widget to show the different experiments."
       ],
-      "metadata": {}
+      "metadata": {
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        }
+      }
     },
     {
       "cell_type": "code",
